--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,88406],[],[[4,0,0,[],[1,2879,6139],[]],[5,0,0,[],[1,9020,10129],[]],[6,0,0,[],[1,19152,10308],[]],[7,0,0,[],[1,29464,24382],[]],[8,0,0,[],[1,53847,9483],[]],[9,0,0,[],[1,63334,3633],[]],[10,0,0,[],[1,66970,2067],[]],[11,0,0,[],[1,69039,4342],[]],[12,0,0,[],[1,73385,11804],[]]],[],[9,9,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,115388],[],[[4,0,0,[],[1,2816,8099],[]],[5,0,0,[],[1,10919,22300],[]],[6,0,0,[],[1,33221,11340],[]],[7,0,0,[],[1,44564,52376],[]],[8,0,0,[],[1,96942,1841],[]],[9,0,0,[],[1,98786,16600],[]]],[],[6,6,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*3. 정산 내역","*c:\\Dev\\robotframework\\Automation_Testcase\\3. 정산 내역.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20ndJLdMvyk/KL0krSsxNLc8vytZ3LC3Jz00syczPiw9JLS5JTixO1TfWUzUyUHV1VnU0ULU0BTEsjFSdDMCCTmC2CUjQ0lzV0UUPbJ6SHT1ssdFPtAMA320/Zg==","*---- 1. 정산내역관리 Testcase","*-------- 1.1. 정산내역 등록","*-------- 1.2. 정산내역 수정","*-------- 1.2. 정산내역 삭제","*-------- 1.3. 정산내역 검색 &amp; 정산월 변경","*---- 2. 정산내역공유 Testcase","*-------- 2.1. 정산내역 상세보기","*-------- 2.2. 정산내역 공유하기","*---- 3. 받은 정산 내역 Testcase"]);
+window.output["strings"] = window.output["strings"].concat(["*","*9. App Test","*c:\\Dev\\robotframework\\App\\9. App_Test.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20ndJLdMvyk/KL0krSsxNLc8vytZ3LCjQt9RTNTIAMuJDUotL9MAKlOzI0majn2gHAJURKJg=","*---- 앱 실행","*---- 탐색","*---- 저장됨","*---- 검색","*---- 편집","*---- 더보기"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:22","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:01:28","fail":0,"id":"s1","label":"3. 정산 내역","name":"3. 정산 내역","pass":9,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:53","fail":0,"label":"All Tests","pass":6,"skip":0}],[],[{"elapsed":"00:01:55","fail":0,"id":"s1","label":"9. App Test","name":"9. App Test","pass":6,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1743746465326;
+window.output["baseMillis"] = 1743753374087;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 88544;
+window.output["generated"] = 115701;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
